--- a/matrix_pod.yaml
+++ b/matrix_pod.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
-kind: Job
+kind: Pod
 metadata:
-  name: matrix_pod
+  name: matrix-pod
 spec:
   containers:
-    - name: matrix_container
-      image: matrix_image
+    - name: matrix-container
+      image: paveldrexler/matrix_assignment:test
       volumeMounts:
-      - name: matrix_volume
-        mountPath: /usr/app/src
+      - name: matrix-volume
+        mountPath: /usr/app/src 
   volumes:
-    - name: matrix_volume
+    - name: matrix-volume
       configMap:
-        name: matrix_config_file
+        name: assignment-config-file
