--- a/matrix_job.yaml
+++ b/matrix_job.yaml
@@ -13,7 +13,7 @@ spec:
           volumeMounts:
           - name: matrix-volume
             mountPath: /usr/app/src
-          command: ["python",  "./cheapest_path.py"]
+          command: ["python",  "/usr/app/src/cheapest_path.py"]
       restartPolicy: Never
       volumes:
         - name: matrix-volume
